--- a/src/app/product-details-component/product-details-component.component.html
+++ b/src/app/product-details-component/product-details-component.component.html
@@ -1,6 +1,7 @@
 <h2>Product Details</h2>
 
 <div *ngIf="product">
+    <img src={{product.image}}>
     <h3>{{product.name}}</h3>
     <h4>{{product.price | currency}}</h4>
     <p>{{product.description}}</p>
